# rust-hdl-bsp-icesugar-1-5

./: .gitignore  Cargo.toml  README.md
src/: pins.rs  synth.rs
